<resources>
    <string name="app_name">Rumaysho Mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab1">Latest Posts</string>
    <string name="tab2">Aqidah</string>
    <string name="tab3">Akhlaq</string>
    <string name="tab4">Amalan</string>

    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="tags">Tags</string>
    <string name="detail">Detail</string>
    <string name="search">Search</string>

    <string name="social_media">Social Media</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>

    <string name="txt_example">Faedah Sirah Nabi: Pensyariatan Jihad dan Pelajaran di Dalamnya</string>
    <string name="info_example">Muhammad Abduh Tuasikal, MSc | 2 days ago</string>

    <string name="post_desc">postingan</string>
    <string name="title_example">Akhlaq</string>

    <string name="confirm_exit">Press again to exit</string>
    <string name="search_hint">Search Rumaysho</string>
</resources>