<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.idn.rumayshomobile.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/fragment_categories"
        android:name="com.idn.rumayshomobile.ui.fragment.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/fragment_tags"
        android:name="com.idn.rumayshomobile.ui.fragment.TagsFragment"
        android:label="@string/tags"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/fragment_collection_detail"
        android:name="com.idn.rumayshomobile.ui.fragment.CollectionDetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_collection_detail">

        <argument
            android:name="collectionId"
            app:argType="integer" />

        <argument
            android:name="collectionType"
            app:argType="com.idn.rumayshomobile.models.type.CollectionType" />

    </fragment>

    <action
        android:id="@+id/action_to_detail"
        app:destination="@id/fragment_collection_detail" />

</navigation>